# BakeEngine

./: .gitignore  CMakeLists.txt  InputNodeTree.xcf  LICENSE  README.md  main.cpp
.github/ISSUE_TEMPLATE/: bug_report.md
Application/: Application.cpp  Application.h  OpenGLApp.cpp  OpenGLApp.h
FileParser/: DataView.cpp  DataView.h  File.cpp  File.h  ModelManager.cpp  ModelManager.h  TrueType.cpp  TrueType.h
FileParser/Model/: Collada.cpp  Collada.h
FileParser/Model/fres/: Fres.cpp  Fres.h
Input/: InputCallable.h  InputManager.cpp  InputManager.h  InputNode.cpp  InputNode.h  KeyBind.cpp  KeyBind.h
Render/OpenGL/: ElementBuffer.cpp  ElementBuffer.h  Framebuffer.cpp  Framebuffer.h  GLObject.cpp  GLObject.h  GLRenderer.cpp  GLRenderer.h  GLShader.cpp  GLShader.h  GLTexture.cpp  GLTexture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
Scene/: Camera.cpp  Camera.h  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Node.h  Scene.h
UI/: GuiButton.cpp  GuiButton.h  GuiElement.cpp  GuiElement.h
Util/: LogHelperBE.cpp  LogHelperBE.h
Util/Math/: Angle.cpp  Angle.h  Math.cpp  Math.h  Matrix4.cpp  Matrix4.h  Vector3.cpp  Vector3.h
resources/: fbDepth.shader  gui_placeholder.xcf  standard.shader
resources/models/: output.bfres  simple.dae
resources/shaders/: framebuffer.shader  gui.shader  standard.shader
resources/textures/: gui_placeholder.xcf
src/: main.cpp
src/Application/: Application.cpp  Application.h
src/FileParser/: DataView.cpp  DataView.h  File.cpp  TrueType.cpp  TrueType.h  stb_image.h
src/FileParser/Model/: Collada.h
src/FileParser/Model/fres/: Fres.cpp  Fres.h
src/Input/: InputManager.cpp  InputManager.h  KeyBind.cpp
src/Render/OpenGL/: ElementBuffer.cpp  ElementBuffer.h  Framebuffer.cpp  Framebuffer.h  GLRenderer.cpp  GLRenderer.h  GLShader.cpp  GLShader.h  GLTexture.cpp  GLTexture.h  Renderbuffer.cpp  Renderbuffer.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
src/Scene/: Camera.cpp  Camera.h  Material.h  Mesh.cpp  Mesh.h
src/UI/: GuiElement.cpp  GuiElement.h
src/Util/: LogHelperBE.cpp  LogHelperBE.h
src/Util/Math/: Math.cpp  Math.h  Matrix4.cpp  Matrix4.h  Vector3.cpp  Vector3.h
window/: AbstractApplication.h  Application.cpp  Application.h  OpenGLApp.cpp  OpenGLApp.h
